@@ -29,7 +29,8 @@ PostGIS 2.1.0
 
 * New Features *
 
-  - topology.clearTopoGeom (Sandro Santilli / Vizzuality)
+  - toTopoGeom with TopoGeometry sink (Sandro Santilli / Vizzuality)
+  - clearTopoGeom (Sandro Santilli / Vizzuality)
   - ST_Segmentize(geography) (Paul Ramsey / OpenGeo)
   - ST_DelaunayTriangles (Sandro Santilli / Vizzuality)
   - ST_NearestValue, ST_Neighborhood (Bborie Park / UC Davis)
